# AIGRIP2020HT

./: README.md
JetsonNano/Onboard/: CMakeLists.txt  readme.txt
JetsonNano/Onboard/Executable/: CMakeLists.txt  main.cpp
JetsonNano/Onboard/GeneralTypedefs/: .typedefsGripperNano.h.swp  CMakeLists.txt  typedefsGripperNano.h  typedefsGripperNano.h.save
JetsonNano/Onboard/codegen/: readme.txt
JetsonNano/Onboard/codegen/lib/ApproachObjectCPU/: ApproachObject.cpp  ApproachObject.h  ApproachObject_data.cpp  ApproachObject_data.h  ApproachObject_initialize.cpp  ApproachObject_initialize.h  ApproachObject_rtw.bat  ApproachObject_rtw.mk  ApproachObject_rtw.rsp  ApproachObject_rtw_comp.rsp  ApproachObject_terminate.cpp  ApproachObject_terminate.h  ApproachObject_types.h  CMakeLists.txt  buildInfo.mat  codeInfo.mat  codedescriptor.dmr  compileInfo.mat  defines.txt  gcGuiReport.mat  rtw_proj.tmw  rtwtypes.h
JetsonNano/Onboard/codegen/lib/ForwardKinematicsCPU/: CMakeLists.txt  ForwardKinematics.cpp  ForwardKinematics.h  ForwardKinematics_data.cpp  ForwardKinematics_data.h  ForwardKinematics_initialize.cpp  ForwardKinematics_initialize.h  ForwardKinematics_rtw.bat  ForwardKinematics_rtw.mk  ForwardKinematics_terminate.cpp  ForwardKinematics_terminate.h  ForwardKinematics_types.h  codedescriptor.dmr  defines.txt  rtwtypes.h
JetsonNano/Onboard/codegen/lib/GetPixelLengthCPU/: CMakeLists.txt  GetPixelLength.cpp  GetPixelLength.h  GetPixelLength_data.cpp  GetPixelLength_data.h  GetPixelLength_initialize.cpp  GetPixelLength_initialize.h  GetPixelLength_rtw.bat  GetPixelLength_rtw.mk  GetPixelLength_terminate.cpp  GetPixelLength_terminate.h  GetPixelLength_types.h  codedescriptor.dmr  defines.txt  rtwtypes.h
JetsonNano/Onboard/codegen/lib/GetSignatureCPU/: CMakeLists.txt  GetARsing.h  GetSignature.cpp  GetSignature.h  GetSignature_initialize.cpp  GetSignature_terminate.cpp  buildInfo.mat  codeInfo.mat  gcGuiReport.mat  rtGetNaN.cpp  rt_defines.h  rt_nonfinite.cpp  rt_nonfinite.h
JetsonNano/Onboard/codegen/lib/GetValidGripPointsCPU/: CMakeLists.txt  GetValidGripPoints.cpp  GetValidGripPoints.h  GetValidGripPoints_data.cpp  GetValidGripPoints_data.h  GetValidGripPoints_initialize.cpp  GetValidGripPoints_initialize.h  GetValidGripPoints_rtw.bat  GetValidGripPoints_rtw.mk  GetValidGripPoints_terminate.cpp  GetValidGripPoints_terminate.h  GetValidGripPoints_types.h  InverseKinematicsPreshape.cpp  InverseKinematicsPreshape.h  buildInfo.mat  codeInfo.mat  codedescriptor.dmr  compileInfo.mat  cosd.cpp  cosd.h  defines.txt  gcGuiReport.mat  rtGetInf.cpp  rtGetInf.h  rtGetNaN.cpp  rtGetNaN.h  rt_defines.h  rt_nonfinite.cpp  rt_nonfinite.h  rtw_proj.tmw  rtwtypes.h
JetsonNano/Onboard/codegen/lib/InverseKinematicsPreshapeCPU/: CMakeLists.txt  InverseKinematicsPreshape.cpp  InverseKinematicsPreshape.h  InverseKinematicsPreshape_data.cpp  InverseKinematicsPreshape_data.h  InverseKinematicsPreshape_initialize.cpp  InverseKinematicsPreshape_initialize.h  InverseKinematicsPreshape_rtw.bat  InverseKinematicsPreshape_rtw.mk  InverseKinematicsPreshape_terminate.cpp  InverseKinematicsPreshape_terminate.h  InverseKinematicsPreshape_types.h  codedescriptor.dmr  defines.txt  rtGetInf.cpp  rtGetInf.h  rtGetNaN.cpp  rtGetNaN.h  rt_defines.h  rt_nonfinite.cpp  rt_nonfinite.h  rtwtypes.h
JetsonNano/Onboard/codegen/lib/MorphologicalFiltersCPU/: CMakeLists.txt  MorphologicalFilters.cpp  MorphologicalFilters.h  MorphologicalFilters_data.cpp  MorphologicalFilters_data.h  MorphologicalFilters_initialize.cpp  MorphologicalFilters_initialize.h  MorphologicalFilters_internal_types.h  MorphologicalFilters_terminate.cpp  MorphologicalFilters_terminate.h  MorphologicalFilters_types.h  NeighborhoodProcessor.cpp  NeighborhoodProcessor.h  bsxfun.cpp  bsxfun.h  bwconncomp.cpp  bwconncomp.h  codedescriptor.dmr  defines.txt  imerode.cpp  imerode.h  imfill.cpp  imfill.h  imreconstruct.cpp  imreconstruct.h  minOrMax.cpp  minOrMax.h  morphologicalFilters_rtw.bat  morphologicalFilters_rtw.mk  morphopAlgo.cpp  morphopAlgo.h  regionprops.cpp  regionprops.h  rtGetInf.cpp  rtGetInf.h  rtGetNaN.cpp  rtGetNaN.h  rt_nonfinite.cpp  rt_nonfinite.h  rtwtypes.h
JetsonNano/Onboard/codegen/lib/ParallelMotorAnglet2CPU/: CMakeLists.txt  ParallelMotorAnglet2.cpp  ParallelMotorAnglet2.h  ParallelMotorAnglet2_data.cpp  ParallelMotorAnglet2_data.h  ParallelMotorAnglet2_initialize.cpp  ParallelMotorAnglet2_initialize.h  ParallelMotorAnglet2_rtw.bat  ParallelMotorAnglet2_rtw.mk  ParallelMotorAnglet2_terminate.cpp  ParallelMotorAnglet2_terminate.h  ParallelMotorAnglet2_types.h  codedescriptor.dmr  defines.txt  rtwtypes.h
JetsonNano/Onboard/codegen/lib/PointToLineCPU/: CMakeLists.txt  PointToLine.cpp  PointToLine.h  PointToLine_data.cpp  PointToLine_data.h  PointToLine_initialize.cpp  PointToLine_initialize.h  PointToLine_rtw.bat  PointToLine_rtw.mk  PointToLine_terminate.cpp  PointToLine_terminate.h  PointToLine_types.h  codedescriptor.dmr  defines.txt  rtwtypes.h
JetsonNano/Onboard/codegen/lib/StableLineCPU/: CMakeLists.txt  StableLine.cpp  StableLine.h  StableLine_initialize.cpp  StableLine_initialize.h  StableLine_rtw.mk  StableLine_terminate.cpp  StableLine_terminate.h  codedescriptor.dmr  compileInfo.mat  extremeKElements.cpp  extremeKElements.h  rtGetInf.cpp  rtGetInf.h  rtGetNaN.cpp  rtGetNaN.h  rt_nonfinite.cpp  sort.h  sortIdx.cpp  sortIdx.h  sortLE.h  sortrows.cpp  sortrows.h  unique.cpp
JetsonNano/Onboard/codegen/lib/colourBalanceCPU/: CMakeLists.txt  codedescriptor.dmr  colourBalance.cpp  colourBalance.h  colourBalance_data.cpp  colourBalance_data.h  colourBalance_initialize.cpp  colourBalance_initialize.h  colourBalance_rtw.bat  colourBalance_rtw.mk  colourBalance_terminate.cpp  defines.txt  (+3 more)
JetsonNano/Onboard/communication/: CMakeLists.txt  communication.cpp  communication.h  communicationBLT.c  communicationBLT.h  communicationI2C.cpp  communicationI2C.h
JetsonNano/Onboard/control/: .control.cpp.swp  CMakeLists.txt  control.cpp  control.h
JetsonNano/Onboard/imageCapture/: CMakeLists.txt  imageCapture.cpp  imageCapture.h
(+694 files in other folders)
